<?xml version="1.0"?>
<package>
  <name>raspimouse_control</name>
  <version>0.1.0</version>
  <description>The raspimouse_control package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>

  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="yukipass19@gmail.com">Yuki Watanabe</author>

  <license>MIT</license>

  <url type="website">https://github.com/rt-net/raspimouse_sim/wiki</url>
  <url type="repository">https://github.com/rt-net/raspimouse_sim</url>
  <url type="bugtracker">https://github.com/rt-net/raspimouse_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <!-- <build_depend>roscpp</build_depend> -->
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>gazebo_ros_control</build_depend>

  <run_depend>rospy</run_depend>
  <!-- <run_depend>roscpp</run_depend> -->
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

  <export>

  </export>
</package>
