<?xml version="1.0"?>
<package format="2">
  <name>raspimouse_control</name>
  <version>0.1.1</version>
  <description>The raspimouse_control package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>

  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="yukipass19@gmail.com">Yuki Watanabe</author>

  <license>MIT</license>

  <url type="website">https://github.com/rt-net/raspimouse_sim/wiki</url>
  <url type="repository">https://github.com/rt-net/raspimouse_sim</url>
  <url type="bugtracker">https://github.com/rt-net/raspimouse_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>rospy</depend>

  <export>

  </export>
</package>
