<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspimouse_fake</name>
  <version>2.0.0</version>
  <description>The raspimouse_control package</description>
  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <license>MIT</license>

  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="yukipass19@gmail.com">Yuki Watanabe</author>
  <author email="yusuke.kato@rt-net.jp">Yusuke Kato</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
