<?xml version="1.0"?>
<package>
  <name>raspimouse_gazebo</name>
  <version>0.1.0</version>
  <description>The raspimouse_gazebo package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>

  <license>MIT</license>

  <url type="website">https://github.com/rt-net/raspimouse_sim/wiki</url>
  <url type="repository">https://github.com/rt-net/raspimouse_sim</url>
  <url type="bugtracker">https://github.com/rt-net/raspimouse_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>gazebo_plugins</run_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>

  <export>

  </export>
</package>
