<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspimouse_gazebo</name>
  <version>1.0.0</version>
  <description>The raspimouse_gazebo package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="yusuke.kato@rt-net.jp">Yusuke Kato</author>

  <license>MIT</license>

  <url type="website">https://github.com/rt-net/raspimouse_sim/wiki</url>
  <url type="repository">https://github.com/rt-net/raspimouse_sim</url>
  <url type="bugtracker">https://github.com/rt-net/raspimouse_sim/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ros_gz</depend>
  <depend>controller_manager</depend>
  <depend>raspimouse_fake</depend>
  <depend>raspimouse_description</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
