<?xml version="1.0"?>
<package format="2">
  <name>raspimouse_sim</name>
  <version>0.1.1</version>
  <description>ROS package suite for Raspberry Pi Mouse Simulator</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>

  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="yukipass19@gmail.com">Yuki Watanabe</author>

  <license>MIT</license>

  <url type="website">https://github.com/rt-net/raspimouse_sim/wiki</url>
  <url type="repository">https://github.com/rt-net/raspimouse_sim</url>
  <url type="bugtracker">https://github.com/rt-net/raspimouse_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>raspimouse_description</depend>
  <depend>raspimouse_gazebo</depend>
  <depend>raspimouse_control</depend>

  <export>
    <metapackage/>
  </export>
</package>
