<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspimouse_sim</name>
  <version>2.1.0</version>
  <description>ROS 2 package suite for Raspberry Pi Mouse Simulator</description>
  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <license>MIT</license>

  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="yukipass19@gmail.com">Yuki Watanabe</author>
  <author email="yusuke.kato@rt-net.jp">Yusuke Kato</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>raspimouse_fake</exec_depend>
  <exec_depend>raspimouse_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
